--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -87,7 +87,7 @@
 .mobile-menu__close-button {
   position: absolute;
   top: 20px;
-  right: 0;
+  right: 20px;
 }
 .nav-list__item:not(:last-child) {
   margin-bottom: 32px;
