--- a/css/main.css
+++ b/css/main.css
@@ -426,7 +426,7 @@ img {
 .mobile-menu__close-button {
   position: absolute;
   top: 20px;
-  right: 0;
+  right: 20px;
 }
 
 .nav-list__item:not(:last-child) {
