--- a/css/main.css
+++ b/css/main.css
@@ -67,8 +67,15 @@ img {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .container {
@@ -78,7 +85,7 @@ img {
   margin: 0 auto;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .container {
     width: 480px;
   }
@@ -324,6 +331,10 @@ img {
   transform: translateY(0%);
 }
 
+.header {
+  border-bottom: 1px solid var(--third-background);
+}
+
 @media screen and (max-width: 767px) {
   .header {
     padding-top: 16px;
@@ -331,12 +342,36 @@ img {
   }
 }
 
-.nav {
-  display: none;
+@media screen and (min-width: 768px) {
+  .header .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
-.header__address-list {
-  display: none;
+.header__nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .header__nav {
+    display: flex;
+    justify-content: center;
+    padding-top: 21px;
+    padding-bottom: 21px;
+    padding-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__nav {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .logo {
@@ -359,6 +394,58 @@ img {
   color: var(--title-text-color);
 }
 
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    margin-right: 93px;
+  }
+}
+
+.nav {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav {
+    display: flex;
+    justify-content: center;
+    padding-left: 0;
+  }
+}
+
+.nav__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.nav__link {
+  color: var(--title-text-color);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  transition: color var(--transition-duration) var(--transition-timing-function);
+}
+
+.nav__link:hover, .nav__link:focus {
+  color: var(--accent-color);
+}
+
+.nav__link.active {
+  position: relative;
+  color: var(--accent-color);
+}
+
+.nav__link.active::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+  position: absolute;
+  bottom: -33px;
+}
+
 .burger-button {
   background-color: transparent;
   border: none;
@@ -371,12 +458,80 @@ img {
   height: 40px;
 }
 
-@media screen and (max-width: 767px) {
-  .header__nav {
+@media screen and (min-width: 768px) {
+  .burger-button {
+    display: none;
+  }
+}
+
+.header__address-list {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header__address-list {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__address-list {
     display: flex;
-    justify-content: space-between;
+    margin-left: auto;
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__address-item {
+    margin-right: 50px;
+  }
+  .header__address-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+.header__address-link {
+  color: var(--primary-text-color);
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  transition: color var(--transition-duration) var(--transition-timing-function);
+}
+
+.header__address-link:hover, .header__address-link:focus {
+  color: var(--accent-color);
+}
+
+@media screen and (max-width: 1199px) {
+  .header__address-link {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__address-link {
+    font-size: 14px;
+    line-height: 1.14;
+    display: flex;
+    text-align: center;
     align-items: center;
   }
+  .header__address-link:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+.header__address-icon {
+  margin-right: 10px;
+  fill: var(--primary-text-color);
+  cursor: pointer;
+  transition: fill var(--transition-duration) var(--transition-timing-function);
+}
+
+.header__address-link:hover .header__address-icon,
+.header__address-link:focus .header__address-icon {
+  fill: var(--accent-color);
 }
 
 .mobile-menu {
@@ -455,12 +610,12 @@ img {
   margin-bottom: 32px;
 }
 
-.address-list__link .address-list__link {
+.address-list__link {
   font-weight: 500;
   transition: color var(--transition-duration) var(--transition-timing-function);
 }
 
-.address-list__link .address-list__link:hover, .address-list__link .address-list__link:focus {
+.address-list__link:hover, .address-list__link:focus {
   color: var(--accent-color);
 }
 
@@ -588,17 +743,49 @@ img {
   background-color: var(--accent-color);
 }
 
-.features__list {
-  display: flex;
-  justify-content: center;
+@media screen and (min-width: 768px) {
+  .features__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+  }
 }
 
-.features__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .features__list {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .features__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .features__item:nth-child(odd) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .features__item {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-top: 30px;
+  }
 }
 
 .features__wrapper {
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: var(--secondary-background);
   border-radius: 4px;
@@ -618,17 +805,31 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 10px;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .features__descr-title {
+    text-align: left;
+  }
 }
 
 .features__descr-text {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  width: 270px;
 }
 
-.activity {
-  margin-top: -94px;
+@media screen and (max-width: 1199px) {
+  .activity {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .activity {
+    margin-top: -94px;
+  }
 }
 
 .activity__heading {
@@ -672,107 +873,6 @@ img {
   text-align: center;
   text-transform: uppercase;
   color: var(--white-color);
-}
-
-.team {
-  background-color: var(--secondary-background);
-  color: var(--title-text-color);
-}
-
-.team__heading {
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin-bottom: 50px;
-}
-
-.team__list {
-  display: flex;
-  justify-content: center;
-  padding: 0;
-}
-
-.team__item {
-  background-color: var(--white-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-
-.team__list .team__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.team__item-wrapper {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.team__member {
-  color: var(--title-text-color);
-  font-weight: 500;
-  font-size: 16px;
-  text-align: center;
-  line-height: 1.18;
-  letter-spacing: 0.03em;
-  margin-bottom: 10px;
-}
-
-.team__member-activity {
-  color: var(--primary-text-color);
-  font-weight: 400;
-  font-size: 16px;
-  text-align: center;
-  line-height: 1.18;
-  letter-spacing: 0.03em;
-}
-
-.team__social-links-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin-top: 16px;
-}
-
-.team__social-links-item:not(:last-child) {
-  margin-right: 10px;
-}
-
-.team__social-links-item-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  transition: background-color var(--transition-duration) var(--transition-timing-function);
-}
-
-.team__social-links-item-link:hover, .team__social-links-item-link:focus {
-  background-color: var(--accent-color);
-  border-radius: 50%;
-}
-
-.team__social-links-item-link:not(:last-child) {
-  margin-right: 3px;
-}
-
-.team__icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: fill var(--transition-duration) var(--transition-timing-function);
-}
-
-.team__social-links-item-link .team__icon {
-  fill: var(--icon-fill);
-  cursor: pointer;
-  transition: fill var(--transition-duration) var(--transition-timing-function);
-}
-
-.team__social-links-item-link:hover .team__icon,
-.team__social-links-item-link:focus .team__icon {
-  fill: var(--white-color);
 }
 
 .clients__headline {
