--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
 
   // 480
-  @media screen and (min-width: 480px) {
+  @media screen and (max-width: 767px) {
     width: 480px;
   }
   // 768
