--- a/sass/layout/_activity.scss
+++ b/sass/layout/_activity.scss
@@ -1,7 +1,11 @@
 .activity {
-  margin-top: -94px;
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: -94px;
+  }
 }
-
 .activity__heading {
   color: var(--title-text-color);
   font-size: 36px;
