--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,12 +1,38 @@
 .features__list {
-  display: flex;
-  justify-content: center;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
 }
+
 .features__item:not(:last-child) {
-  margin-right: 30px;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
 }
+@media screen and (min-width: 768px) {
+  .features__item:nth-child(odd) {
+    margin-right: 30px;
+  }
+}
+.features__item {
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-top: 30px;
+  }
+}
+
 .features__wrapper {
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: var(--secondary-background);
   border-radius: 4px;
@@ -24,10 +50,67 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 10px;
+  text-align: center;
+  @media screen and (min-width: 768px) {
+    text-align: left;
+  }
 }
 .features__descr-text {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  width: 270px;
+  // width: 270px;
 }
+
+// .features__list {
+//   @media screen and (min-width: 768px) {
+//     display: flex;
+//     flex-wrap: wrap;
+//     margin-left: -30px;
+//     margin-top: -30px;
+//   }
+//   @media screen and (min-width: 1200px) {
+//     display: flex;
+//     justify-content: center;
+//   }
+// }
+// .features__item {
+//   @media screen and (min-width: 768px) {
+//     flex-basis: calc(100% / 3 - 30px);
+//     margin-left: 30px;
+//     margin-top: 30px;
+//   }
+// }
+// .features__item:not(:last-child) {
+//   @media screen and (min-width: 768px) {
+//     margin-right: 30px;
+//   }
+// }
+// .features__wrapper {
+//   width: 100%;
+//   height: auto;
+//   background-color: var(--secondary-background);
+//   border-radius: 4px;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
+// .features__descr {
+//   margin-top: 30px;
+// }
+
+// .features__descr-title {
+//   color: var(--title-text-color);
+//   font-size: 14px;
+//   line-height: 1.14;
+//   letter-spacing: 0.03em;
+//   text-transform: uppercase;
+//   margin-bottom: 10px;
+// }
+
+// .features__descr-text {
+//   font-size: 14px;
+//   line-height: 1.7;
+//   letter-spacing: 0.03em;
+//   width: 270px;
+// }
