--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./base/base";
 @import "./base/container";
 // COMPONENTS
+@import "./components/mobile-menu";
 @import "./components/backdrop";
 @import "./components/modal-window";
 @import "./components/modal-form";
