--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,6 +1,4 @@
 .modal {
-  width: 528px;
-  height: 581px;
   background-color: var(--white-color);
   position: absolute;
   left: 50%;
@@ -10,6 +8,15 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  @media screen and (max-width: 1199px) {
+    width: 450px;
+    height: 609px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
 }
 .close-btn {
   height: 30px;
