--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -30,6 +30,11 @@
     margin-top: 30px;
   }
 }
+.features__item:nth-child(3n + 1) {
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
+}
 
 .features__wrapper {
   width: 100%;
