--- a/sass/layout/_filter-buttons.scss
+++ b/sass/layout/_filter-buttons.scss
@@ -1,12 +1,27 @@
 .filter__buttons-list {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-  padding: 0;
+  @media screen and (max-width: 767px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-bottom: 40px;
+    margin-top: -15px;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    margin-bottom: 50px;
+    padding: 0;
+  }
 }
-
 .filter__buttons-item:not(:last-child) {
   margin-right: 8px;
+}
+
+.filter__buttons-item {
+  @media screen and (max-width: 767px) {
+    margin-top: 15px;
+  }
 }
 .filter__button {
   background-color: var(--secondary-background);
