--- a/sass/layout/_filter.scss
+++ b/sass/layout/_filter.scss
@@ -1,16 +1,31 @@
 .filter__list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
 }
 
 .filter__item {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-left: 30px;
-  margin-top: 30px;
   transition: box-shadow var(--transition-duration)
     var(--transition-timing-function);
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+}
+.filter__item:not(:last-child) {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+  }
 }
 .filter__img-wrapper {
   position: relative;
@@ -26,7 +41,6 @@
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 }
-
 .filter__content {
   padding: 20px 24px;
   border-right: 1px solid var(--filter-border);
