--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,25 +1,45 @@
 .footer {
   background-color: var(--dark-background);
-  padding-top: 60px;
-  padding-bottom: 60px;
+  margin: 0 auto;
+}
+.footer__wrapper {
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: baseline;
+  }
 }
 
-.footer__wrapper {
-  display: flex;
-  align-items: baseline;
+.footer__info-wrapper {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
 }
 .footer__left-side-wrapper {
-  margin-right: 70px;
+  margin-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    margin-right: 70px;
+  }
+}
+.logo_position {
+  @media screen and (max-width: 1199px) {
+    display: block;
+    text-align: center;
+  }
 }
 .logo__footer {
   color: var(--white-color);
-  margin-bottom: 20px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 20px;
+  }
 }
-
 .footer__address {
   margin-top: 20px;
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
 }
-
 .footer__address-text {
   color: var(--white-color);
   font-style: normal;
@@ -27,9 +47,11 @@
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 9px;
+  }
 }
-
 .footer__address-link {
   font-style: normal;
   font-weight: normal;
@@ -37,7 +59,6 @@
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--footer-link);
-  display: flex;
   transition: color var(--transition-duration) var(--transition-timing-function);
 
   &:hover,
@@ -46,9 +67,16 @@
   }
 }
 .footer__address-item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 9px;
+  }
 }
-
+.footer__right-side-wrapper {
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 60px;
+  }
+}
 .footer__subscribe {
   font-weight: 700;
   font-size: 14px;
@@ -57,12 +85,17 @@
   text-transform: uppercase;
   color: var(--white-color);
   margin-bottom: 20px;
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
 }
-
 .footer__social-links-list {
   display: flex;
+  @media screen and (max-width: 1199px) {
+    align-items: center;
+    justify-content: center;
+  }
 }
-
 .footer__social-link {
   display: flex;
   align-items: center;
@@ -94,7 +127,9 @@
   justify-content: center;
 }
 .footer__mailing-wrapper {
-  margin-left: 93px;
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
 }
 .footer__mailing-head {
   display: block;
@@ -105,14 +140,21 @@
   text-transform: uppercase;
   color: var(--white-color);
   margin-bottom: 20px;
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
 }
 .footer__mailing-form {
-  display: flex;
-  margin: 0;
+  @media screen and (min-width: 768px) {
+    text-align: center;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin: 0;
+  }
 }
-
 .footer__mailing-form-input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -121,6 +163,7 @@
   color: var(--white-color);
   transition: border-color var(--transition-duration)
     var(--transition-timing-function);
+  margin-bottom: 20px;
 
   &::placeholder {
     font-size: 16px;
@@ -132,6 +175,19 @@
     outline: none;
   }
 }
+@media screen and (min-width: 768px) {
+  .footer__mailing-form-input {
+    width: 450px;
+    height: 50px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__mailing-form-input {
+    width: 358px;
+    height: 50px;
+  }
+}
+
 .footer__submit-btn {
   width: 200px;
   height: 50px;
@@ -155,6 +211,10 @@
   padding-right: 28px;
   transition: box-shadow var(--transition-duration)
     var(--transition-timing-function);
+
+  @media screen and (max-width: 1199px) {
+    margin: 0 auto;
+  }
 }
 
 .footer-icon {
