--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 .header {
   border-bottom: 1px solid var(--third-background);
+
   @media screen and (max-width: 767px) {
     padding-top: 16px;
     padding-bottom: 16px;
@@ -12,12 +13,14 @@
     }
   }
 }
-.header__nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0;
 
+.header__nav {
+  @media screen and (max-width: 767px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+  }
   @media screen and (min-width: 768px) {
     display: flex;
     justify-content: center;
@@ -34,36 +37,37 @@
 .logo {
   color: var(--accent-color);
   font-family: var(--secondary-font-family);
-  font-size: 24px;
-  line-height: 1.16;
-  font-weight: 700;
-  letter-spacing: 0.03em;
-
-  @media screen and (min-width: 1200px) {
-    font-size: 26px;
-    line-height: 1.19;
-  }
+  font-size: 26px;
+  font-weight: 700px;
+  line-height: 1.19;
 }
 .logo_color {
   color: var(--title-text-color);
 }
 .header__logo {
+  @media screen and (min-width: 768px) {
+    // margin-right: 88px;
+  }
   @media screen and (min-width: 1200px) {
     margin-right: 93px;
   }
 }
 .nav {
-  display: none;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
   @media screen and (min-width: 768px) {
     display: flex;
     justify-content: center;
     padding-left: 0;
   }
 }
-.nav__item:not(:last-child) {
-  margin-right: 50px;
-}
 
+.nav__item:not(:last-child) {
+  @media screen and (min-width: 768px) {
+    margin-right: 50px;
+  }
+}
 .nav__link {
   color: var(--title-text-color);
   font-style: normal;
@@ -94,24 +98,10 @@
     bottom: -33px;
   }
 }
-.burger-button {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  line-height: 0;
-  &__icon {
-    width: 40px;
-    height: 40px;
-  }
 
-  @media screen and (min-width: 768px) {
-    display: none;
-  }
-}
 .header__address-list {
-  display: none;
-  @media screen and (min-width: 768px) {
-    display: block;
+  @media screen and (max-width: 767px) {
+    display: none;
   }
   @media screen and (min-width: 1200px) {
     display: flex;
@@ -120,38 +110,32 @@
   }
 }
 
-.header__address-item {
+.header__address-item:not(:last-child) {
+  @media screen and (min-width: 768px) {
+    margin-bottom: 10px;
+  }
   @media screen and (min-width: 1200px) {
     margin-right: 50px;
-    &:not(:last-child) {
-      margin-bottom: 10px;
-    }
   }
 }
+
 .header__address-link {
   color: var(--primary-text-color);
   font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
+  display: flex;
+  text-align: center;
+  align-items: center;
   transition: color var(--transition-duration) var(--transition-timing-function);
+
   &:hover,
   &:focus {
     color: var(--accent-color);
   }
-
-  @media screen and (max-width: 1199px) {
-    font-size: 12px;
-    line-height: 1.16;
-  }
-  @media screen and (min-width: 1200px) {
-    font-size: 14px;
-    line-height: 1.14;
-    display: flex;
-    text-align: center;
-    align-items: center;
-
-    &:not(:last-child) {
-      margin-right: 50px;
-    }
+  &:not(:last-child) {
+    margin-right: 50px;
   }
 }
 
@@ -165,114 +149,4 @@
   .header__address-link:focus & {
     fill: var(--accent-color);
   }
-}
-
-.mobile-menu {
-  position: fixed;
-  z-index: 100;
-  left: 0;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: var(--white-color);
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-.mobile-menu.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-.mobile-menu__container {
-  position: relative;
-  margin: 0;
-  padding-top: 48px;
-  padding-left: 40px;
-}
-.close-button {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  line-height: 0;
-  transition: fill var(--transition-duration) var(--transition-timing-function);
-
-  &:hover,
-  &:focus {
-    fill: var(--accent-color);
-  }
-
-  &__icon {
-    width: 40px;
-    height: 40px;
-    padding: 0;
-  }
-}
-.mobile-menu__close-button {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-}
-.nav-list__item:not(:last-child) {
-  margin-bottom: 32px;
-}
-.nav-list__link {
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.17px;
-  letter-spacing: 0.02em;
-  color: var(--title-text-color);
-  transition: color var(--transition-duration) var(--transition-timing-function);
-
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-  }
-}
-.address-list {
-  margin-top: 302px;
-  margin-bottom: 64px;
-}
-.address-list__item:not(:last-child) {
-  margin-bottom: 32px;
-}
-.address-list__link {
-  font-weight: 500;
-  transition: color var(--transition-duration) var(--transition-timing-function);
-
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-  }
-}
-
-.address-list__tel {
-  font-size: 34px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  color: var(--accent-color);
-  margin-bottom: 32px;
-}
-.address-list__email {
-  font-size: 24px;
-  line-height: 1.16;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-}
-.social {
-  display: flex;
-  justify-content: start;
-}
-
-.social__item:not(:last-child) {
-  margin-right: 10px;
-  padding-right: 10px;
-  border-right: 1px solid rgba(33, 33, 33, 0.2);
-}
-.social__link {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
-  color: var(--accent-color);
 }
