--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -20,7 +20,14 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    margin-left: -30px;
     margin-top: -30px;
+    padding: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
     padding: 0;
   }
 }
@@ -29,81 +36,78 @@
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-}
 
-@media screen and (min-width: 768px) {
-  .team__item:nth-child(odd) {
-    margin-right: 30px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .team__item {
+  @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
     margin-top: 30px;
   }
+}
+.team__item:not(:last-child) {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+  }
+}
 
-  .team__item-wrapper {
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-  .team__member {
-    color: var(--title-text-color);
-    font-weight: 500;
-    font-size: 16px;
-    text-align: center;
-    line-height: 1.18;
-    letter-spacing: 0.03em;
-    margin-bottom: 10px;
-  }
-  .team__member-activity {
-    color: var(--primary-text-color);
-    font-weight: 400;
-    font-size: 16px;
-    text-align: center;
-    line-height: 1.18;
-    letter-spacing: 0.03em;
-  }
-  .team__social-links-list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin-top: 16px;
-  }
+.team__item-wrapper {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.team__member {
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  margin-bottom: 10px;
+}
+.team__member-activity {
+  color: var(--primary-text-color);
+  font-weight: 400;
+  font-size: 16px;
+  text-align: center;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+}
+.team__social-links-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 16px;
+}
 
-  .team__social-links-item:not(:last-child) {
-    margin-right: 10px;
-  }
+.team__social-links-item:not(:last-child) {
+  margin-right: 10px;
+}
 
-  .team__social-links-item-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 44px;
-    height: 44px;
+.team__social-links-item-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  transition: background-color var(--transition-duration)
+    var(--transition-timing-function);
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
     border-radius: 50%;
-    transition: background-color var(--transition-duration)
-      var(--transition-timing-function);
-
-    &:hover,
-    &:focus {
-      background-color: var(--accent-color);
-      border-radius: 50%;
-    }
-
-    &:not(:last-child) {
-      margin-right: 3px;
-    }
   }
 
-  .team__icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: fill var(--transition-duration)
-      var(--transition-timing-function);
+  &:not(:last-child) {
+    margin-right: 3px;
   }
+}
+
+.team__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: fill var(--transition-duration) var(--transition-timing-function);
 
   .team__social-links-item-link & {
     fill: var(--icon-fill);
@@ -111,7 +115,6 @@
     transition: fill var(--transition-duration)
       var(--transition-timing-function);
   }
-
   .team__social-links-item-link:hover &,
   .team__social-links-item-link:focus & {
     fill: var(--white-color);
