--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ img {
   margin: 0 auto;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .container {
     width: 480px;
   }
@@ -103,16 +103,17 @@ img {
   }
 }
 
-.burger-button {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  line-height: 0;
-}
-
-.burger-button__icon {
-  width: 40px;
-  height: 40px;
+@media screen and (max-width: 767px) {
+  .burger-button {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+  }
+  .burger-button__icon {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -140,11 +141,16 @@ img {
   pointer-events: auto;
 }
 
-.mobile-menu__container {
-  position: relative;
-  margin: 0;
-  padding-top: 48px;
-  padding-left: 40px;
+@media screen and (max-width: 767px) {
+  .mobile-menu__container {
+    position: relative;
+    margin: 0;
+    padding: 40px 48px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
 
 .close-button {
@@ -168,11 +174,7 @@ img {
 .mobile-menu__close-button {
   position: absolute;
   top: 20px;
-  right: 20px;
-}
-
-.mobile__nav-list {
-  margin-bottom: 230px;
+  right: 16px;
 }
 
 .mobile__nav-item:not(:last-child) {
@@ -229,6 +231,7 @@ img {
 
 .mobile__social {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .mobile__social-item:not(:last-child) {
@@ -513,7 +516,7 @@ img {
 @media screen and (min-width: 768px) {
   .header .container {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: space-between;
   }
 }
@@ -523,7 +526,6 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0;
   }
 }
 
@@ -674,13 +676,14 @@ img {
   text-align: center;
   margin: 0 auto;
   background-size: cover;
+  background-position: center;
 }
 
 @media screen and (max-width: 767px) {
   .hero {
     max-width: 480px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-mobile-1x.jpg);
-    background-size: 480px auto;
+    background-size: cover;
     background-repeat: no-repeat;
     padding: 118px 0;
   }
@@ -1283,7 +1286,7 @@ img {
 @media screen and (min-width: 768px) {
   .footer__info-wrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: baseline;
   }
 }
