--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
 
   // 480
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 480px) {
     width: 480px;
   }
   // 768
@@ -17,11 +17,3 @@
     width: 1200px;
   }
 }
-
-// .container {
-//   width: 1200px;
-//   margin-left: auto;
-//   margin-right: auto;
-//   padding-left: 15px;
-//   padding-right: 15px;
-// }
