--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,7 +8,7 @@
   @media screen and (min-width: 768px) {
     & .container {
       display: flex;
-      align-items: center;
+      align-items: baseline;
       justify-content: space-between;
     }
   }
@@ -19,7 +19,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0;
   }
   @media screen and (min-width: 768px) {
     display: flex;
@@ -45,9 +44,6 @@
   color: var(--title-text-color);
 }
 .header__logo {
-  @media screen and (min-width: 768px) {
-    // margin-right: 88px;
-  }
   @media screen and (min-width: 1200px) {
     margin-right: 93px;
   }
