--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -2,6 +2,7 @@
   text-align: center;
   margin: 0 auto;
   background-size: cover;
+  background-position: center;
 
   @media screen and (max-width: 767px) {
     max-width: 480px;
@@ -11,7 +12,7 @@
         rgba(47, 48, 58, 0.4)
       ),
       url(../images/hero-mobile-1x.jpg);
-    background-size: 480px auto;
+    background-size: cover;
     background-repeat: no-repeat;
     padding: 118px 0;
   }
