--- a/css/main.css
+++ b/css/main.css
@@ -218,7 +218,7 @@ img {
 }
 
 .mobile__addres-tel {
-  font-size: 34px;
+  font-size: 8vw;
   line-height: 1.17;
   color: var(--accent-color);
 }
@@ -260,6 +260,7 @@ img {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
+  overflow-y: auto;
   transition: opacity var(--transition-duration) var(--transition-timing-function), visibility var(--transition-duration) var(--transition-timing-function);
 }
 
@@ -273,24 +274,26 @@ img {
   background-color: var(--white-color);
   position: absolute;
   left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  top: 15%;
+  width: 96vw;
+  transform: translate(-50%) scale(1);
   padding: 40px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  overflow-y: auto;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) {
   .modal {
     width: 450px;
-    height: 609px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 528px;
-    height: 581px;
+    width: 530px;
+    top: 50%;
+    transform: translate -50%, -50% scale 1;
   }
 }
 
