--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -2,20 +2,27 @@
   background-color: var(--white-color);
   position: absolute;
   left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  top: 15%;
+  width: 96vw;
+  transform: translate(-50%) scale(1);
   padding: 40px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  overflow-y: auto;
 
-  @media screen and (max-width: 1199px) {
+  @media screen and (min-width: 480px) {
     width: 450px;
-    height: 609px;
   }
+
+  // @media screen and (max-width: 1199px) {
+  //   width: 450px;
+  //   height: 609px;
+  // }
   @media screen and (min-width: 1200px) {
-    width: 528px;
-    height: 581px;
+    width: 530px;
+    top: 50%;
+    transform: translate (-50%, -50%) scale (1);
   }
 }
 .close-btn {
