--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -78,6 +78,7 @@
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
