--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -14,6 +14,7 @@
 .clients__list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   padding: 0;
 
   @media screen and (max-width: 1199px) {
