--- a/sass/layout/_filter.scss
+++ b/sass/layout/_filter.scss
@@ -43,6 +43,7 @@
 }
 .filter__content {
   padding: 20px 24px;
+  padding-right: 0;
   border-right: 1px solid var(--filter-border);
   border-left: 1px solid var(--filter-border);
   border-bottom: 1px solid var(--filter-border);
